force-app/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <description>[i2sema] Notification Sending Infomations
알림 메세지 발송정보</description>
    <label>Notifications</label>
    <nameField>
        <displayFormat>N{yyMMdd}{0000000000}</displayFormat>
        <label>Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>