force-app/main/default/objects/Notification__c/fields/ARS_080_Phone__c.field-meta.xml
<CustomField>
    <fullName>ARS_080_Phone__c</fullName>
    <description>080 수신거부 전화번호  광고성 필수
Message rejection :</description>
    <label>ARS 080 Phone</label>
    <type>Phone</type>
</CustomField>