force-app/main/default/objects/Notification__c/fields/BroadCast__c.field-meta.xml
<CustomField>
    <fullName>BroadCast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BroadCast</label>
    <type>Checkbox</type>
</CustomField>