force-app/main/default/objects/Notification__c/fields/BTNURL1_2__c.field-meta.xml
<CustomField>
    <fullName>BTNURL1_2__c</fullName>
    <label>BTNURL1_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>