force-app/main/default/objects/Notification__c/fields/BTNURL2_1__c.field-meta.xml
<CustomField>
    <fullName>BTNURL2_1__c</fullName>
    <label>BTNURL2_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>