force-app/main/default/objects/Notification__c/fields/byHeroku__c.field-meta.xml
<CustomField>
    <fullName>byHeroku__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[PMK DCE]Heroku 통해서 생성/수정된 Notification 
Heroku 통해서 생성/수정시 Notification Validation bypass 처리함.</description>
    <label>by Heroku</label>
    <type>Checkbox</type>
</CustomField>