force-app/main/default/objects/Notification__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NPS 인입 채널 트래킹을 위한 필드</description>
    <label>사례</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Notification Name</relationshipLabel>
    <relationshipName>Notification_Name</relationshipName>
    <type>Lookup</type>
</CustomField>