force-app/main/default/objects/Notification__c/fields/Channel2__c.field-meta.xml
<CustomField>
    <fullName>Channel2__c</fullName>
    <description>2차 발송 채널</description>
    <inlineHelpText>1차발송 실패시, 2차 발송 채널</inlineHelpText>
    <label>Channel2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>