force-app/main/default/objects/Notification__c/fields/ContactInformationOptIn__c.field-meta.xml
<CustomField>
    <fullName>ContactInformationOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact Information Opt-In</description>
    <inlineHelpText>고객의 정보성 수신 동의</inlineHelpText>
    <label>Contact Information Opt-In</label>
    <type>Checkbox</type>
</CustomField>