force-app/main/default/objects/Notification__c/fields/ContactMarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>ContactMarketingOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PMK DCE ContactMarketingOptIn__c</description>
    <inlineHelpText>고객의 광고성 수신동의 정보</inlineHelpText>
    <label>Contact Marketing Opt-In</label>
    <type>Checkbox</type>
</CustomField>