force-app/main/default/objects/Notification__c/fields/fm_KakaoFriendTalkImageURL__c.field-meta.xml
<CustomField>
    <fullName>fm_KakaoFriendTalkImageURL__c</fullName>
    <formula>KakaoFriendTalkImage__r.ImageURL__c</formula>
    <label>Kakao Friend Talk Image URL</label>
    <type>Text</type>
</CustomField>