force-app/main/default/objects/Notification__c/fields/fm_Label1Usage__c.field-meta.xml
<CustomField>
    <fullName>fm_Label1Usage__c</fullName>
    <formula>NotificationTemplate__r.LABEL1__c</formula>
    <label>Label 1 Usage</label>
    <type>Checkbox</type>
</CustomField>