force-app/main/default/objects/Notification__c/fields/fm_Label2Usage__c.field-meta.xml
<CustomField>
    <fullName>fm_Label2Usage__c</fullName>
    <formula>NotificationTemplate__r.LABEL2__c</formula>
    <label>Label 2 Usage</label>
    <type>Checkbox</type>
</CustomField>