force-app/main/default/objects/Notification__c/fields/fm_Label3Usage__c.field-meta.xml
<CustomField>
    <fullName>fm_Label3Usage__c</fullName>
    <formula>NotificationTemplate__r.LABEL3__c</formula>
    <label>Label 3 Usage</label>
    <type>Checkbox</type>
</CustomField>