force-app/main/default/objects/Notification__c/fields/fm_Phone__c.field-meta.xml
<CustomField>
    <fullName>fm_Phone__c</fullName>
    <formula>IF( 
				AND(NOT(ISBLANK(Account__c)),NOT(ISBLANK(Account__r.Phone))) 
				, Account__r.Phone
				, IF( 
        AND(NOT(ISBLANK(Contact__c)),NOT(ISBLANK(Contact__r.Phone))) 
								, Contact__r.Phone
								, IF( 
												AND(NOT(ISBLANK(Lead__c)),NOT(ISBLANK(Lead__r.Phone))) 
												, Lead__r.Phone
												, IF(
												    AND(NOT(ISBLANK(User__c)),NOT(ISBLANK(User__r.Phone)))
																, User__r.Phone
																, NULL
												)
								)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>