force-app/main/default/objects/Notification__c/fields/fm_SenderDivision__c.field-meta.xml
<CustomField>
    <fullName>fm_SenderDivision__c</fullName>
    <formula>CreatedBy.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sender Division</label>
    <type>Text</type>
</CustomField>