force-app/main/default/objects/Notification__c/fields/IF_CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>IF_CompletedDate__c</fullName>
    <description>IF_CompletedDate  발송 Log 완료시간</description>
    <label>IF Completed Date</label>
    <type>DateTime</type>
</CustomField>