force-app/main/default/objects/Notification__c/fields/IF_FailedDate__c.field-meta.xml
<CustomField>
    <fullName>IF_FailedDate__c</fullName>
    <description>발송 요청 IF 실패 혹은 발송 결과 실패 시간</description>
    <label>IF Failed Date</label>
    <type>DateTime</type>
</CustomField>