force-app/main/default/objects/Notification__c/fields/IF_RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>IF_RequestedDate__c</fullName>
    <description>IF Requested Date 발송요청 시간</description>
    <label>IF Requested Date</label>
    <type>DateTime</type>
</CustomField>