force-app/main/default/objects/Notification__c/fields/Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Outbound__c</fullName>
    <description>NPS 발송 채널 트래킹을 위한 필드</description>
    <label>Inbound/Outbound</label>
    <length>255</length>
    <type>Text</type>
</CustomField>