force-app/main/default/objects/Notification__c/fields/IsForcedSend__c.field-meta.xml
<CustomField>
    <fullName>IsForcedSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsForcedSend</label>
    <type>Checkbox</type>
</CustomField>