force-app/main/default/objects/Notification__c/fields/IsSendingReservation__c.field-meta.xml
<CustomField>
    <fullName>IsSendingReservation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sending Reservation</label>
    <type>Checkbox</type>
</CustomField>