force-app/main/default/objects/Notification__c/fields/KakaoFriendTalkImage__c.field-meta.xml
<CustomField>
    <fullName>KakaoFriendTalkImage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kakao Friend Talk Image</label>
    <referenceTo>KakaoFriendTalkImage__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>