force-app/main/default/objects/Notification__c/fields/KDCE_ShortenURL__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ShortenURL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KDCE_ShortenURL 단축 URL 처리 플래그 : 트리거 Content 치환 처리 스킵</description>
    <label>Shorten URL</label>
    <type>Checkbox</type>
</CustomField>