force-app/main/default/objects/Notification__c/fields/LABEL1__c.field-meta.xml
<CustomField>
    <fullName>LABEL1__c</fullName>
    <label>LABEL1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>