force-app/main/default/objects/Notification__c/fields/LABEL2__c.field-meta.xml
<CustomField>
    <fullName>LABEL2__c</fullName>
    <label>LABEL2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>