force-app/main/default/objects/Notification__c/fields/LABEL3__c.field-meta.xml
<CustomField>
    <fullName>LABEL3__c</fullName>
    <label>LABEL3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>