force-app/main/default/objects/Notification__c/fields/msg_status2__c.field-meta.xml
<CustomField>
    <fullName>msg_status2__c</fullName>
    <description>2차 발송 메세지 상태</description>
    <inlineHelpText>1차 발송 실패시, 2차 발송 상태</inlineHelpText>
    <label>MSG Status2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>