force-app/main/default/objects/Notification__c/fields/msg_status__c.field-meta.xml
<CustomField>
    <fullName>msg_status__c</fullName>
    <description>1: pending, 2: 결과대기, 3:완료</description>
    <label>MSG Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Failed request to send</fullName>
            </value>
            <value>
                <fullName>Failed request to cancel</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>