force-app/main/default/objects/Notification__c/fields/NotificationAutomaticSetting__c.field-meta.xml
<CustomField>
    <fullName>NotificationAutomaticSetting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Notification Automatic Setting</description>
    <label>Notification Automatic Setting</label>
    <referenceTo>NotificationAutomaticSetting__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>