force-app/main/default/objects/Notification__c/fields/NotificationGroup__c.field-meta.xml
<CustomField>
    <fullName>NotificationGroup__c</fullName>
    <label>Notification Group</label>
    <referenceTo>NotificationGroup__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>