force-app/main/default/objects/Notification__c/fields/ORGID__c.field-meta.xml
<CustomField>
    <fullName>ORGID__c</fullName>
    <description>Salesforce.com Organization Id</description>
    <formula>$Organization.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORG ID</label>
    <type>Text</type>
</CustomField>