force-app/main/default/objects/Notification__c/fields/ORGName__c.field-meta.xml
<CustomField>
    <fullName>ORGName__c</fullName>
    <description>Salesforce.com Organization Name</description>
    <formula>$Organization.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORG Name</label>
    <type>Text</type>
</CustomField>