force-app/main/default/objects/Notification__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>NPS 인입 채널 트래킹을 위한 필드</description>
    <label>사례 접수경로</label>
    <length>255</length>
    <type>Text</type>
</CustomField>