force-app/main/default/objects/Notification__c/fields/OriginSystem__c.field-meta.xml
<CustomField>
    <fullName>OriginSystem__c</fullName>
    <defaultValue>&apos;SFDC&apos;</defaultValue>
    <description>[PMK DCE]Origin System 메세지 발송 시스템 SFSC/ SFMC</description>
    <inlineHelpText>발송 시스템</inlineHelpText>
    <label>Origin System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFDC</fullName>
                <default>true</default>
                <label>SFDC</label>
            </value>
            <value>
                <fullName>SFMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>