force-app/main/default/objects/Notification__c/fields/RawContents__c.field-meta.xml
<CustomField>
    <fullName>RawContents__c</fullName>
    <label>Raw Contents</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>