force-app/main/default/objects/Notification__c/fields/ResendCount__c.field-meta.xml
<CustomField>
    <fullName>ResendCount__c</fullName>
    <description>[I2SEMA] ResendCount</description>
    <label>Resend Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>