force-app/main/default/objects/Notification__c/fields/SenderPhone__c.field-meta.xml
<CustomField>
    <fullName>SenderPhone__c</fullName>
    <description>발신번호</description>
    <label>Sender Phone</label>
    <type>Phone</type>
</CustomField>