force-app/main/default/objects/Notification__c/fields/SendingTime__c.field-meta.xml
<CustomField>
    <fullName>SendingTime__c</fullName>
    <description>발송 시간</description>
    <label>SendingTime</label>
    <type>DateTime</type>
</CustomField>