force-app/main/default/objects/Notification__c/fields/SFMC_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Group_Id__c</fullName>
    <description>SFMC Group Id</description>
    <inlineHelpText>SFMC Group Id</inlineHelpText>
    <label>SFMC Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>