force-app/main/default/objects/Notification__c/fields/SFMC_MSG_Id__c.field-meta.xml
<CustomField>
    <fullName>SFMC_MSG_Id__c</fullName>
    <description>SFMC MSG Id</description>
    <inlineHelpText>SFMC MSG Id</inlineHelpText>
    <label>SFMC MSG Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>