force-app/main/default/objects/Notification__c/fields/TargetId__c.field-meta.xml
<CustomField>
    <fullName>TargetId__c</fullName>
    <description>Target Object Record Id</description>
    <label>TargetId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>