force-app/main/default/objects/Notification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>메세지CL? 타입  1:광고성, 2:정보성.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cl_Type</valueSetName>
    </valueSet>
</CustomField>