force-app/main/default/objects/Notification__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validity</label>
    <type>Checkbox</type>
</CustomField>