force-app/main/default/objects/Notification__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>NotificationGroup__c</columns>
    <columns>Channel__c</columns>
    <columns>Contact__c</columns>
    <columns>Content__c</columns>
    <columns>Validity__c</columns>
    <columns>IF_FailedDate__c</columns>
    <columns>IF_RequestedDate__c</columns>
    <columns>IF_CompletedDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>